--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,54 +1,38 @@
-name: Update data
+name: Update Data from PMB
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [main]
+  schedule:
+    - cron: '0 0 * * *'  # Täglich um Mitternacht
 
 jobs:
-  generate-data:
+  update-data:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Repository auschecken
+        uses: actions/checkout@v4
         with:
-          persist-credentials: true
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup Python
+      - name: Python einrichten
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Fetch external data
+      - name: Script ausführen
         run: python fetch-data-from-pmb.py
 
-      - name: Install xsltproc
-        run: sudo apt-get update && sudo apt-get install -y xsltproc
-
-      - name: Create output directories
+      - name: Änderungen committen und pushen
         run: |
-          mkdir -p data/indices
-          mkdir -p data/editions/xml
-
-      - name: Transform partOf.xml
-        run: xsltproc -o data/indices/partOf.xml xslts/import-relations-to-complete/partOf.xsl input-data/partOf.xml
-
-      - name: Transform relations.xml – Step 1: Relations to List
-        run: xsltproc -o temp1.xml xslts/import-relations-to-complete/1_relations-to-list.xsl input-data/relations.xml
-
-      - name: Transform relations.xml – Step 2: Distinct Days
-        run: xsltproc -o temp2.xml xslts/import-relations-to-complete/2_distinct-days.xsl temp1.xml
-
-      - name: Transform relations.xml – Step 3: Wohnsitz ergänzen
-        run: xsltproc -o data/editions/xml/wienerschnitzler_complete.xml xslts/import-relations-to-complete/3_wohnsitz-ergaenzen.xsl temp2.xml
-
-      - name: Cleanup temporary files
-        run: rm temp1.xml temp2.xml
-
-      - name: Commit and push generated data
-        run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
-          git add data/indices/partOf.xml data/editions/xml/wienerschnitzler_complete.xml
-          # [skip ci] verhindert, dass dieser Commit einen neuen Workflow-Run auslöst
-          git commit -m "Update generated data [skip ci]" || echo "No changes to commit"
-          git push
+          # Überprüfen, ob im Ordner input-data Änderungen vorhanden sind
+          if [ -n "$(git status --porcelain input-data)" ]; then
+            git config --global user.name "github-actions"
+            git config --global user.email "github-actions@github.com"
+            git add input-data
+            git commit -m "Update input-data Dateien"
+            git push
+          else
+            echo "Keine Änderungen im input-data Ordner, Commit wird übersprungen."
+          fi
