--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,6 +3,9 @@ name: Update Data from PMB
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-data:
     runs-on: ubuntu-latest
