--- a/build.xml
+++ b/build.xml
@@ -1,61 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." name="tei2html">
-    <property name="index" value="./data/meta/about.xml"/>
-    <property name="target" value="./html"/>
-     <delete>
-        <fileset dir="${target}" includes="*.html" />
-    </delete> 
-    <xslt style="./xslt/editions.xsl"  basedir="./data/editions" destdir="${target}" includes="*.xml">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <xslt style="./xslt/meta.xsl"  basedir="./data/meta" destdir="${target}" includes="*.xml">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-     <xslt in="${index}" out="${target}/search.html" style="./xslt/search.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt> 
-    <xslt in="${index}" out="${target}/index.html" style="./xslt/index.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <xslt in="${index}" out="${target}/toc.html" style="./xslt/toc.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <!--<xslt in="./data/imprint.xml" out="${target}/imprint.html" style="./xslt/imprint.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>-->
-    <xslt in="./data/editions/entry__1925-02-12.xml" out="${target}/imprint.html" style="./xslt/imprint.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <xslt in="./data/indices/listperson.xml" out="${target}/listperson.html" style="./xslt/listperson.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <xslt in="./data/indices/listwork.xml" out="${target}/listwork.html" style="./xslt/listwork.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <xslt in="./data/indices/listplace.xml" out="${target}/listplace.html" style="./xslt/listplace.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <xslt in="./data/indices/listplace.xml" out="${target}/calendar.html" style="./xslt/calendar.xsl">
-        <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-        <classpath location="${basedir}/saxon/saxon9he.jar"/>
-    </xslt>
-    <replace dir="${target}" value="">
-        <include name="*.html"/>
-        <replacetoken> xmlns=""</replacetoken>
-    </replace>
-    <copy todir="${target}" flatten="true">
-        <fileset dir="./data/">
-            <include name="**/*.xml"/>
-        </fileset>
-    </copy>
+<project name="TransformXML" default="transform" basedir=".">
+  <!-- Ziel: Erstellt den Ausgabeordner -->
+  <target name="init">
+    <mkdir dir="data/indices"/>
+  </target>
+
+  <!-- Ziel: Führt die XSLT-Transformation durch -->
+  <target name="transform" depends="init">
+    <xslt in="input-data/partOf.xml"
+          style="xslts/import-relations-to-complete/partOf.xsl"
+          out="data/indices/partOf.xml"/>
+  </target>
 </project>
