--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -40,9 +40,9 @@ jobs:
           if [ -n "$(git status --porcelain input-data)" ]; then
             git config --global user.name "github-actions"
             git config --global user.email "github-actions@github.com"
-            git add input-data
-            git commit -m "Update input-data Dateien"
+            git add .
+            git commit -m "Update durch Workflow"
             git push
           else
-            echo "Keine Änderungen im input-data Ordner, Commit wird übersprungen."
+            echo "Keine Änderungen im Daten-Ordner, Commit wird übersprungen."
           fi
