--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Änderungen committen und pushen
         run: |
-          if [ -n "$(git status --porcelain input-data)" ]; then
+          if [ -n "$(git status --porcelain)" ]; then
             git config --global user.name "github-actions"
             git config --global user.email "github-actions@github.com"
             git add .
