--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install openjdk-11-jre-headless ant -y --no-install-recommends
           # Falls script.sh weitere Setup-Schritte enthält:
-          ./script.sh
+          ./dl_saxon.sh
 
       - name: Python einrichten
         uses: actions/setup-python@v4
@@ -32,7 +32,7 @@ jobs:
         run: pip install requests
 
       - name: Daten aus PMB abrufen
-        run: python fetch-data-from-pmb.py
+        run: python3 ./python-scripts/fetch-data-from-pmb.py
 
       - name: Build mit Ant ausführen
         run: ant -f build.xml
